infra/k8s/hub-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hub-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hub
  template:
    metadata:
      labels:
        app: hub
    spec:
      containers:
        - name: hub
          image: schradermade/hotspotti:hub
---
apiVersion: v1
kind: Service
metadata:
  name: hub-srv
spec:
  selector:
    app: hub
  ports:
    - name: hub
      protocol: TCP
      port: 3000
      targetPort: 3000
